--- a/assets/_sass/_icons.scss
+++ b/assets/_sass/_icons.scss
@@ -12,6 +12,7 @@ $icon-3-o-clock: "\e90a";
 $icon-4-o-clock: "\e90b";
 $icon-share: "\e90c";
 $icon-angle-up: "\e90d";
+$icon-close: "\e90e";
 
 @mixin dojoicon($icon: false, $position: 'before') {
 
@@ -38,11 +39,11 @@ $icon-angle-up: "\e90d";
 
 @font-face {
 	font-family: 'dojoicon';
-	src: url('../fonts/dojoicon.eot?ry2rq6');
-	src: url('../fonts/dojoicon.eot?ry2rq6#iefix') format('embedded-opentype'),
-	     url('../fonts/dojoicon.ttf?ry2rq6') format('truetype'),
-	     url('../fonts/dojoicon.woff?ry2rq6') format('woff'),
-	     url('../fonts/dojoicon.svg?ry2rq6#dojoicon') format('svg');
+	src: url('../fonts/dojoicon.eot?7yeqzt');
+	src: url('../fonts/dojoicon.eot?7yeqzt#iefix') format('embedded-opentype'),
+	     url('../fonts/dojoicon.ttf?7yeqzt') format('truetype'),
+	     url('../fonts/dojoicon.woff?7yeqzt') format('woff'),
+	     url('../fonts/dojoicon.svg?7yeqzt#dojoicon') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -92,4 +93,7 @@ $icon-angle-up: "\e90d";
 }
 .icon-angle-up:before {
 	content: $icon-angle-up;
+}
+.icon-close:before {
+	content: $icon-close;
 }
