--- a/assets/_sass/main.scss
+++ b/assets/_sass/main.scss
@@ -38,34 +38,123 @@ strong {
 	font-weight: $black;
 }
 
-.menu-button {
-	background: #fff;
-	border-radius: 0;
-	box-shadow: none;
-	color: $default-font-color;
-	font-size: 20px;
-	line-height: 40px;
-	height: 40px;
-	padding: 0;
-	position: fixed;
-	right: 0;
-	top: 30px;
-	width: 40px;
-
-	&:hover {
-		background: #fff;
-		color: $blue;
-	}
-}
-
 .header {
 
-	.nav {
-		display: none;
+	.menu-trigger {
+		@include position(fixed, 30px 0 auto auto);
+		background: #fff;
+		border-radius: 0;
+		// box-shadow: none;
+		color: $default-font-color;
+		font-size: 20px;
+		line-height: 40px;
+		height: 40px;
+		padding: 0;
+		width: 40px;
+		z-index: 99;
+
+		&:hover {
+			background: #fff;
+			color: $blue;
+		}
 	}
 
-	.action {
-		display: none;
+	.menu {
+		@include position(fixed, 0 0 auto 0);
+		-webkit-overflow-scrolling: touch;
+		overflow-y: auto;
+		transform: translateY(-300px);
+		transition: all .25s linear;
+		width: 100%;
+		z-index: 9999;
+
+		&.is-visible {
+			transform: translateY(0);
+		}
+
+		.menu-close-outer {
+			background: #fff;
+			border-bottom: 1px solid $default-font-color;
+			text-align: right;
+
+			button {
+				background: transparent;
+				box-shadow: none;
+				color: $default-font-color;
+				font-weight: $thin;
+				font-size: 16px;
+				line-height: 18px;
+				padding: 10px;
+			}
+		}
+
+		.nav {
+
+			> ul {
+				@include clearfix;
+				text-transform: uppercase;
+				font-size: 14px;
+				font-weight: $medium;
+
+				a {
+					display: block;
+					background: #fff;
+					padding: 7px 1em;
+				}
+
+				> li {
+					border-bottom: 1px solid $default-font-color;
+					float: left;
+					text-align: center;
+					width: 50%;
+
+					&:nth-child(even) {
+
+						> a {
+							border-left: 1px solid $default-font-color;
+						}
+					}
+
+					> ul {
+						display: none;
+					}
+				}
+			}
+		}
+
+		.action {
+			background: #fff;
+			padding: 10px 20px;
+			text-align: center;
+
+			.share {
+				display: none;
+			}
+
+			.button {
+				@extend .button-blue;
+				box-shadow: none;
+				font-size: 14px;
+
+				&:before {
+					margin-right: .3em;
+				}
+			}
+		}
+	}
+
+	.menu-screen {
+		@include position(fixed, 0);
+		background: black;
+		opacity: 0;
+		transition: all .2s ease-in-out;
+		visibility: hidden;
+		z-index: 9998;
+
+		&.is-visible {
+			opacity: .4;
+			visibility: visible;
+		}
 	}
 }
 
@@ -239,12 +328,12 @@ strong {
 
 			.button {
 				margin-bottom: .5em;
-			}
 
-			.icon-flag:before {
-				font-size: 30px;
-				margin-right: .3em;
-				vertical-align: -3px;
+				&:before {
+					font-size: 30px;
+					margin-right: .3em;
+					vertical-align: -3px;
+				}
 			}
 		}
 	}
