Add ninja image

--- a/assets/_sass/main.scss
+++ b/assets/_sass/main.scss
@@ -360,7 +360,7 @@ strong {
 			text-align: center;
 
 			img {
-				width: 168px;
+				width: 170px;
 			}
 		}
 	}
@@ -794,7 +794,7 @@ strong {
 }
 
 .sns-section {
-	background: $blue url("//placehold.it/150/fff") no-repeat center bottom;
+	background: $blue url(../images/ninja.svg) no-repeat center bottom;
 	background-size: 70px;
 	color: #fff;
 	padding-bottom: 120px;
