--- a/assets/_sass/main.scss
+++ b/assets/_sass/main.scss
@@ -216,15 +216,19 @@ strong {
 
 		> li {
 			display: inline-block;
-			margin: 5px;
+			line-height: 1;
+			margin: 6px 5px;
 
 			&.share {
 				color: #fff;
 				font-size: 24px;
-				opacity: .7;
 
-				&:hover {
-					opacity: 1;
+				a {
+					opacity: .7;
+
+					&:hover {
+						opacity: 1;
+					}
 				}
 			}
 
