--- a/assets/_sass/_components.scss
+++ b/assets/_sass/_components.scss
@@ -25,7 +25,7 @@ button,
 	display: inline-block;
 	font-size: 18px;
 	font-weight: $bold;
-	padding: 0.35em 1.5em;
+	padding: .35em 1.5em;
 	text-align: center;
 	text-decoration: none;
 
@@ -38,13 +38,19 @@ button,
 	&.button-small {
 		font-size: 14px;
 		font-weight: $medium;
-		padding: 0.2em 1.25em;
+		padding: .2em 1.25em;
+
+		@include media(min-width $s-screen) {
+			font-size: 16px;
+			padding-top: .1em;
+			padding-bottom: .1em;
+		}
 	}
 
 	&.button-large {
 		font-size: 22px;
 		font-weight: $bold;
-		padding: 0.5em 1.75em;
+		padding: .5em 1.75em;
 	}
 
 	&.button-yellow {
