--- a/assets/_sass/main.scss
+++ b/assets/_sass/main.scss
@@ -248,7 +248,7 @@ strong {
 	.date-venue {
 		background: rgba(#fff, .8);
 		color: $blue;
-		padding: 15px 20px;
+		padding: 15px 0;
 		text-align: center;
 
 		@include media(min-width $s-screen) {
