Add contact-section tablet style

--- a/assets/_sass/main.scss
+++ b/assets/_sass/main.scss
@@ -1114,6 +1114,15 @@ strong {
 	.open-form {
 		box-shadow: none;
 		font-weight: $medium;
+
+		@include media(min-width $s-screen) {
+			font-size: 22px;
+			margin-left: auto;
+			margin-right: auto;
+			padding-top: .5em;
+			padding-bottom: .5em;
+			width: 340px;
+		}
 	}
 }
 
