--- a/assets/_sass/main.scss
+++ b/assets/_sass/main.scss
@@ -86,6 +86,10 @@ strong {
 				line-height: 18px;
 				padding: 10px;
 
+				@include media(min-width $s-screen) {
+					padding: 20px;
+				}
+
 				&:hover {
 					color: $blue;
 				}
@@ -105,6 +109,11 @@ strong {
 					background: #fff;
 					padding: 7px 1em;
 
+					@include media(min-width $s-screen) {
+						padding-top: 17px;
+						padding-bottom: 17px;
+					}
+
 					&:hover {
 						color: $blue;
 					}
@@ -114,12 +123,38 @@ strong {
 					border-top: 1px solid $default-font-color;
 					float: left;
 					text-align: center;
-					width: 50%;
+					width: percentage(1/2);
 
-					&:nth-child(even) {
+					@include media(min-width $s-screen) {
+						width: percentage(1/3);
+					}
+
+					> a {
+						border-left: 1px solid $default-font-color;
+					}
+
+					&:nth-child(odd) {
 
 						> a {
-							border-left: 1px solid $default-font-color;
+							border-left-width: 0;
+
+							@include media(min-width $s-screen) {
+								border-left-width: 1px;
+							}
+						}
+					}
+
+					&:nth-child(3n+1) {
+
+						@include media(min-width $s-screen) {
+							clear: left;
+						}
+
+						> a {
+
+							@include media(min-width $s-screen) {
+								border-left-width: 0;
+							}
 						}
 					}
 
@@ -130,19 +165,42 @@ strong {
 						position: relative;
 						width: 200%;
 
+						@include media(min-width $s-screen) {
+							width: 300%;
+						}
+
 						> li {
 							border-top: 1px solid $default-font-color;
 							float: left;
-							width: 50%;
+							width: percentage(1/2);
+
+							@include media(min-width $s-screen) {
+								width: percentage(1/4);
+							}
 
 							a {
 								background: rgba(#fff, .7);
+								border-left: 1px solid $default-font-color;
 							}
 
-							&:nth-child(even) {
+							&:nth-child(odd) {
 
 								> a {
-									border-left: 1px solid $default-font-color;
+									border-left-width: 0;
+
+									@include media(min-width $s-screen) {
+										border-left-width: 1px;
+									}
+								}
+							}
+
+							&:nth-child(4n+1) {
+
+								> a {
+
+									@include media(min-width $s-screen) {
+										border-left-width: 0;
+									}
 								}
 							}
 						}
@@ -165,9 +223,16 @@ strong {
 				@extend .button-blue;
 				box-shadow: none;
 				font-size: 14px;
+				padding-top: .5em;
+				padding-bottom: .5em;
 
 				&:before {
 					margin-right: .3em;
+
+					@include media(min-width $s-screen) {
+						font-size: 20px;
+						vertical-align: -2px;
+					}
 				}
 			}
 		}
